--- a/wp-content/themes/evestflorida/style.css
+++ b/wp-content/themes/evestflorida/style.css
@@ -529,7 +529,11 @@ button.applynow:hover { cursor: pointer; }
 /*the ajax loading icon*/
 .umloading { width: 100%; height: 44px; margin-top: 180px; background: rgba(255, 255, 255, 0.8) url("ajax_loader.gif") no-repeat 50% 50%; }
 
-.uwpqsf_class { width: -webkit-calc(50% - 45px); width: calc(50% - 45px); display: block; height: auto; float: right; }
+#uwpqsf_id:after { content: ""; display: table; clear: both; }
+
+.uwpqsf_class { width: -webkit-calc(50% - 45px); width: calc(50% - 45px); display: block; height: auto; }
+
+#uwpqsffrom_860 > div:nth-child(6) { display: block; float: left; margin-top: 37px; }
 
 div.tax-check-0 label:nth-child(6) { display: none; }
 
@@ -543,7 +547,10 @@ div.tax-check-0 label:nth-child(6) { display: none; }
 .togglecheck label { display: inline-block; margin: -1px; padding: 4px 12px; margin-bottom: 0; font-size: 14px; line-height: 20px; color: #333; text-align: center; text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75); vertical-align: middle; cursor: pointer; background-color: #f5f5f5; background-image: -webkit-gradient(linear, left top, left bottom, from(white), to(#e6e6e6)); background-image: -webkit-linear-gradient(top, white, #e6e6e6); background-image: linear-gradient(to bottom, white, #e6e6e6); background-repeat: repeat-x; border: 1px solid #ccc; border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); border-bottom-color: #b3b3b3; -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); }
 .togglecheck .input-checked { background-image: none; outline: 0; -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05); background-color: #e0e0e0; color: #219875; }
 
-#test { clear: both; min-height: 359px; -webkit-transition: height 0.2s ease; transition: height 0.2s ease; margin: 0 45px; }
-#test h2 { text-align: center; margin-top: 180px; font-size: 28px; }
+#test { clear: both; min-height: 359px; -webkit-transition: height 0.2s ease; transition: height 0.2s ease; margin: 55px 45px 15px 45px; }
+#test .result { display: inline-block; width: 255px; height: 300px; margin: 10px 15px; border: 1px solid blue; vertical-align: top; overflow: hidden; }
+#test img { width: 255px; }
+#test h2 { font-size: 22px; }
+#test a { display: block; }
 
 /*# sourceMappingURL=style.css.map */
