--- a/wp-content/themes/evestflorida/style.css
+++ b/wp-content/themes/evestflorida/style.css
@@ -533,7 +533,7 @@ button.applynow:hover { cursor: pointer; }
 
 .uwpqsf_class { width: -webkit-calc(50% - 45px); width: calc(50% - 45px); display: block; height: auto; }
 
-#uwpqsffrom_860 > div:nth-child(6) { display: block; float: left; margin-top: 37px; }
+#uwpqsffrom_860 > div:nth-child(6) { display: block; float: left; margin-top: 45px; color: #555555; }
 
 div.tax-check-0 label:nth-child(6) { display: none; }
 
@@ -544,13 +544,22 @@ div.tax-check-0 label:nth-child(6) { display: none; }
 .togglecheck span { display: block; font-size: 18px; font-weight: 700; color: #219875; }
 .togglecheck label { float: left; }
 .togglecheck input[type=checkbox] { display: none; }
-.togglecheck label { display: inline-block; margin: -1px; padding: 4px 12px; margin-bottom: 0; font-size: 14px; line-height: 20px; color: #333; text-align: center; text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75); vertical-align: middle; cursor: pointer; background-color: #f5f5f5; background-image: -webkit-gradient(linear, left top, left bottom, from(white), to(#e6e6e6)); background-image: -webkit-linear-gradient(top, white, #e6e6e6); background-image: linear-gradient(to bottom, white, #e6e6e6); background-repeat: repeat-x; border: 1px solid #ccc; border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); border-bottom-color: #b3b3b3; -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); }
+.togglecheck label { display: inline-block; margin: 1px -1px; padding: 4px 12px; font-size: 14px; line-height: 20px; color: #333; text-align: center; text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75); vertical-align: middle; cursor: pointer; background-color: #f5f5f5; background-image: -webkit-gradient(linear, left top, left bottom, from(white), to(#e6e6e6)); background-image: -webkit-linear-gradient(top, white, #e6e6e6); background-image: linear-gradient(to bottom, white, #e6e6e6); background-repeat: repeat-x; border-radius: 1px; border: 1px solid #ccc; border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); border-bottom-color: #b3b3b3; -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); }
 .togglecheck .input-checked { background-image: none; outline: 0; -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05); background-color: #e0e0e0; color: #219875; }
 
-#test { clear: both; min-height: 359px; -webkit-transition: height 0.2s ease; transition: height 0.2s ease; margin: 55px 45px 15px 45px; }
-#test .result { display: inline-block; width: 255px; height: 300px; margin: 10px 15px; border: 1px solid blue; vertical-align: top; overflow: hidden; }
-#test img { width: 255px; }
-#test h2 { font-size: 22px; }
-#test a { display: block; }
+#results { clear: both; -webkit-transition: height 0.2s ease; transition: height 0.2s ease; margin: 55px 45px 15px 45px; }
+#results .result { display: inline-block; width: 267px; height: 300px; padding: 10px 10px; vertical-align: top; overflow: hidden; }
+#results .result:hover { background-color: #c5f1e5; }
+#results a { display: block; min-height: 360px; }
+#results .contractor-img { height: 175px; -webkit-background-size: cover; background-size: cover; }
+#results h1 { text-align: center; }
+#results h2 { font-size: 22px; margin: 10px 0; }
+#results hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
+
+.contractor-entry img { max-width: 50%; height: auto; float: right; padding: 0 0 45px 45px; }
+.contractor-entry .entry { width: -webkit-calc(50% - 45px); width: calc(50% - 45px); float: left; margin-bottom: 45px; }
+.contractor-entry hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
+.contractor-entry #contact a { width: auto; display: inline-block; background-color: #555555; color: white; font-size: 16px; font-weight: 400; margin: 2px; padding: 5px 11px; border-radius: 7px; }
+.contractor-entry #contact a:hover { background-color: #219875; }
 
 /*# sourceMappingURL=style.css.map */
