--- a/wp-content/themes/evestflorida/style.css
+++ b/wp-content/themes/evestflorida/style.css
@@ -29,7 +29,7 @@ a img { border: 0; display: block; }
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
 
 /* WP BASIC */
-body { font-family: Arial,Century gothic, sans-serif; color: #555; font-size: 13px; background: url(images/background_light2.jpg) repeat-x fixed top center; -webkit-background-size: cover; background-size: cover; font-weight: 400; }
+body { font-family: Arial,Century gothic, sans-serif; color: #555; font-size: 13px; background: url(images/background_light2.jpg) repeat-x fixed top center; -webkit-background-size: cover cover; background-size: cover; font-weight: 400; }
 
 img { border: 0; margin: 0; }
 
@@ -340,7 +340,7 @@ h3.sidetitl { font-family: Helvetica, Arial, sans-serif; background: #219875; co
 
 .sidebox ul ul { list-style-type: none; background-repeat: no-repeat; margin: 0px; padding: 0px; }
 
-.sidebox ul li { list-style-type: none; background: #219875; /*background: url(images/green_bar-arrow.png);*/ background-repeat: no-repeat; -webkit-background-size: cover; background-size: cover; color: #fff; margin-bottom: 4px; text-transform: uppercase; padding: 12px 32px 12px 15px; font-weight: 400; }
+.sidebox ul li { list-style-type: none; background: #219875; /*background: url(images/green_bar-arrow.png);*/ background-repeat: no-repeat; -webkit-background-size: cover cover; background-size: cover; color: #fff; margin-bottom: 4px; text-transform: uppercase; padding: 12px 32px 12px 15px; font-weight: 400; }
 
 .sidebox ul li a:link, .sidebox ul li a:visited { color: #fff; font-size: 13px; text-decoration: none; }
 
@@ -531,15 +531,15 @@ button.applynow:hover { cursor: pointer; }
 
 #uwpqsf_id:after { content: ""; display: table; clear: both; }
 
-.uwpqsf_class { width: -webkit-calc(50% - 45px); width: calc(50% - 45px); display: block; height: auto; }
+.uwpqsf_class { width: calc(50% - 45px); display: block; height: auto; }
 
-#uwpqsffrom_860 > div:nth-child(6) { display: block; float: left; margin-top: 45px; color: #555555; }
-
-div.tax-check-0 label:nth-child(6) { display: none; }
-
-.tax-check-0 { float: left; margin-left: 45px; }
+.tax-select-0 { float: left; margin-left: 45px; }
+.tax-select-0 span { display: block; font-size: 18px; font-weight: 700; color: #219875; }
 
 .tax-check-1 { float: right; margin-right: 45px; }
+
+#uwpqsffrom_860 > div:nth-child(6) { display: block; float: left; margin: 25px 0 0 45px; width: 200px; color: #555555; }
+#uwpqsffrom_860 > div:nth-child(6) label { display: block; width: 250px; font-size: 18px; font-weight: 700; color: #219875; text-transform: none; }
 
 .togglecheck span { display: block; font-size: 18px; font-weight: 700; color: #219875; }
 .togglecheck label { float: left; }
@@ -547,19 +547,28 @@ div.tax-check-0 label:nth-child(6) { display: none; }
 .togglecheck label { display: inline-block; margin: 1px -1px; padding: 4px 12px; font-size: 14px; line-height: 20px; color: #333; text-align: center; text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75); vertical-align: middle; cursor: pointer; background-color: #f5f5f5; background-image: -webkit-gradient(linear, left top, left bottom, from(white), to(#e6e6e6)); background-image: -webkit-linear-gradient(top, white, #e6e6e6); background-image: linear-gradient(to bottom, white, #e6e6e6); background-repeat: repeat-x; border-radius: 1px; border: 1px solid #ccc; border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); border-bottom-color: #b3b3b3; -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); }
 .togglecheck .input-checked { background-image: none; outline: 0; -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05); background-color: #e0e0e0; color: #219875; }
 
-#results { clear: both; -webkit-transition: height 0.2s ease; transition: height 0.2s ease; margin: 55px 45px 15px 45px; }
+#results { clear: both; padding-bottom: 70px; margin: 55px 45px 15px 45px; }
 #results .result { display: inline-block; width: 267px; height: 300px; padding: 10px 10px; vertical-align: top; overflow: hidden; }
 #results .result:hover { background-color: #c5f1e5; }
 #results a { display: block; min-height: 360px; }
-#results .contractor-img { height: 175px; -webkit-background-size: cover; background-size: cover; }
+#results .contractor-img { height: 175px; -webkit-background-size: cover cover; background-size: cover; }
 #results h1 { text-align: center; }
 #results h2 { font-size: 22px; margin: 10px 0; }
 #results hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
+#results .wp-pagenavi, #results .uwpqsfpagi { margin-top: 20px; }
+#results .wp-pagenavi a, #results .uwpqsfpagi a { min-height: 0; }
+
+.upagicurrent { text-decoration: none; background: #219875; border: 1px solid #222; color: #fff; padding: 3px 7px; display: block; text-align: center; float: left; margin-right: 4px; }
+
+.upagievent { text-decoration: none; background: #666666; border: 1px solid #222; color: #fff; padding: 3px 7px; display: block; text-align: center; float: left; margin-right: 4px; }
+.upagievent:hover { color: white; }
 
 .contractor-entry img { max-width: 50%; height: auto; float: right; padding: 0 0 45px 45px; }
-.contractor-entry .entry { width: -webkit-calc(50% - 45px); width: calc(50% - 45px); float: left; margin-bottom: 45px; }
+.contractor-entry .entry { width: calc(50% - 45px); float: left; margin-bottom: 45px; }
 .contractor-entry hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
 .contractor-entry #contact a { width: auto; display: inline-block; background-color: #555555; color: white; font-size: 16px; font-weight: 400; margin: 2px; padding: 5px 11px; border-radius: 7px; }
 .contractor-entry #contact a:hover { background-color: #219875; }
+
+#disclaimer { position: absolute; bottom: 0; width: 870px; padding-bottom: 15px; margin: 0 auto; }
 
 /*# sourceMappingURL=style.css.map */
