--- a/wp-content/themes/evestflorida/SCSS/uwpqf.scss
+++ b/wp-content/themes/evestflorida/SCSS/uwpqf.scss
@@ -50,7 +50,7 @@
 	
 	label {
 		display: block;
-		width: 250px;
+		width: 300px;
 		font-size: 18px;
 		font-weight: 700;
 		color: #219875;
@@ -127,20 +127,14 @@
 	
 	p {
 		line-height: 58px;
-		display: block;
-		float: left;
-		padding-left: 10px;
-	}
-	
-	img {
-		float: left;
-		clear: left;
-		margin: 5px 0;
+		display: inline-block;
+		padding: 0 19px 0 10px;
+		color: #555555;
 	}
 	
 	a {
 		display: block;
-		min-height: 360px;
+		min-height: 400px;
 	}
 	
 	.contractor-img {
@@ -202,13 +196,38 @@
 	}
 }
 
-.contractor-entry {
+.contractor-right {
+	width: 50%;
+	height: auto;
+	float: right;
+	padding: 0 0 45px 45px;
 	
 	img {
-		max-width: 50%;
+		max-width: 100%;
 		height: auto;
-		float: right;
-		padding: 0 0 45px 45px;
+	}
+	
+	p {
+		line-height: 58px;
+		display: inline-block;
+		padding: 0 25px 0 10px;
+		font-weight: 700;
+	}
+}
+
+.tag-image {
+	float: left;
+	margin: 5px 0;
+}
+
+.tag-unit {
+	float: left;
+}
+
+.contractor-entry {
+	
+	h3 {
+		color: #219875;
 	}
 	
 	.entry {
@@ -222,7 +241,6 @@
 		 height: 0;
 		 border-top: 1px solid rgba(0, 0, 0, 0.1);
 		 border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-		
 	}
 	
 	#contact {
