--- a/wp-content/themes/evestflorida/style.css
+++ b/wp-content/themes/evestflorida/style.css
@@ -539,7 +539,7 @@ button.applynow:hover { cursor: pointer; }
 .tax-check-1 { float: right; margin-right: 45px; }
 
 #uwpqsffrom_860 > div:nth-child(6) { display: block; float: left; margin: 25px 0 0 45px; width: 200px; color: #555555; }
-#uwpqsffrom_860 > div:nth-child(6) label { display: block; width: 250px; font-size: 18px; font-weight: 700; color: #219875; text-transform: none; }
+#uwpqsffrom_860 > div:nth-child(6) label { display: block; width: 300px; font-size: 18px; font-weight: 700; color: #219875; text-transform: none; }
 
 .togglecheck span { display: block; font-size: 18px; font-weight: 700; color: #219875; }
 .togglecheck label { float: left; }
@@ -550,9 +550,8 @@ button.applynow:hover { cursor: pointer; }
 #results { clear: both; padding-bottom: 70px; margin: 55px 45px 15px 45px; }
 #results .result { display: inline-block; width: 267px; min-height: 400px; padding: 10px 10px; vertical-align: top; overflow: hidden; }
 #results .result:hover { background-color: #c5f1e5; }
-#results p { line-height: 58px; display: block; float: left; padding-left: 10px; }
-#results img { float: left; clear: left; margin: 5px 0; }
-#results a { display: block; min-height: 360px; }
+#results p { line-height: 58px; display: inline-block; padding: 0 19px 0 10px; color: #555555; }
+#results a { display: block; min-height: 400px; }
 #results .contractor-img { height: 175px; -webkit-background-size: cover cover; background-size: cover; }
 #results h1 { text-align: center; }
 #results h2 { font-size: 22px; margin: 10px 0; }
@@ -565,7 +564,15 @@ button.applynow:hover { cursor: pointer; }
 .upagievent { text-decoration: none; background: #666666; border: 1px solid #222; color: #fff; padding: 3px 7px; display: block; text-align: center; float: left; margin-right: 4px; }
 .upagievent:hover { color: white; }
 
-.contractor-entry img { max-width: 50%; height: auto; float: right; padding: 0 0 45px 45px; }
+.contractor-right { width: 50%; height: auto; float: right; padding: 0 0 45px 45px; }
+.contractor-right img { max-width: 100%; height: auto; }
+.contractor-right p { line-height: 58px; display: inline-block; padding: 0 25px 0 10px; font-weight: 700; }
+
+.tag-image { float: left; margin: 5px 0; }
+
+.tag-unit { float: left; }
+
+.contractor-entry h3 { color: #219875; }
 .contractor-entry .entry { width: calc(50% - 45px); float: left; margin-bottom: 45px; }
 .contractor-entry hr { border: 0; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
 .contractor-entry #contact a { width: auto; display: inline-block; background-color: #555555; color: white; font-size: 16px; font-weight: 400; margin: 2px; padding: 5px 11px; border-radius: 7px; }
