--- a/wp-content/themes/evestflorida/SCSS/uwpqf.scss
+++ b/wp-content/themes/evestflorida/SCSS/uwpqf.scss
@@ -16,7 +16,7 @@
 }
 
 .uwpqsf_class{
-	width: calc(50% - 45px);
+	width: 435px;
 	display: block;
 	height: auto;
 }
@@ -26,6 +26,7 @@
 .tax-select-0 {
 	float: left;
 	margin-left: 45px;
+	margin-bottom: 25px;
 	
 	span {
 		display: block;
@@ -41,22 +42,25 @@
 	
 }
 
+#uwpqsf_id_key {
+	margin: 25px 25px 0 45px;
+}
+
+.-keyword {
+	display: block;
+	width: 300px;
+	margin: 25px 25px -25px 45px;
+	font-size: 18px;
+	font-weight: 700;
+	color: #219875;
+	text-transform: none;
+}
+
 #uwpqsffrom_860 > div:nth-child(6) {
 	display: block;
-	float: left;
-	margin: 25px 0 0 45px;
 	width: 200px;
 	color: #555555;
 	
-	label {
-		display: block;
-		width: 300px;
-		font-size: 18px;
-		font-weight: 700;
-		color: #219875;
-		text-transform: none;
-	
-	}
 }
 
 .togglecheck {
@@ -73,7 +77,14 @@
 	}
 
 	input[type=checkbox] {
-		display:none;
+		display: none;
+		display: inline\9;
+		position: absolute\9;
+		width: 1px\9;
+		height: 1px\9;
+		padding: 0;
+		margin: 0;
+		outline: none;
 	}
 	 
 	label {
@@ -197,10 +208,10 @@
 }
 
 .contractor-right {
-	width: 50%;
+	width: 415px;
 	height: auto;
 	float: right;
-	padding: 0 0 45px 45px;
+	padding: 0 0 45px 20px;
 	
 	img {
 		max-width: 100%;
@@ -231,7 +242,7 @@
 	}
 	
 	.entry {
-		width: calc(50% - 45px);
+		width: 435px;
 		float: left;
 		margin-bottom: 45px;
 	}
