--- a/wp-content/themes/evestflorida/css/landing-style.scss
+++ b/wp-content/themes/evestflorida/css/landing-style.scss
@@ -89,6 +89,23 @@ li {
 .impress {
 	font-size: 1.8em;
 }
+.labeled {
+	
+	span {
+		color: $green;
+		font-weight: 800;
+		text-transform: uppercase;
+	}
+}
+
+.extra-section p > small {
+	font-size: 16px;
+	vertical-align: 1.8ex;
+}
+.credit p > small {
+	font-size: 13px;
+	vertical-align: 1ex;
+}
 
 .container {
 	max-width: 1100px;
@@ -165,6 +182,7 @@ li {
 	z-index: 1000;
 	top: 0;
 	width: 100%;
+	min-width: 320px;
 	height: 60px;
 	background-color: rgba(white, 0.8);
 	box-shadow: 0 5px 5px -2px rgba(0,0,0,0.1);
@@ -192,6 +210,10 @@ li {
 	top: 50%;
 	right: 0;
 	transform: translateY(-50%);
+	
+	.quote-button {
+		font-size: 1rem;
+	}
 }
 
 // The Sections...
@@ -201,7 +223,7 @@ li {
 	height: 100vh;
 	
 	header {
-		max-width: 730px;
+		max-width: 740px;
 		position: relative;
 		top: 50%;
 		transform: translateY(-65%);
@@ -389,14 +411,9 @@ li {
 // Imagery
 //  – Roofing
 
-.broken-roof {
-	background-image: url(../images/landing/roofing/pile_of_wood.jpg);
-}
-.shiny-roof {
-	background-image: url(../images/landing/roofing/top_roof.jpg);
-}
-.whole-home {
-	background-image: url(../images/landing/roofing/roofing_house.jpg)
+.intro {
+	background-size: cover;
+	background-position: center center;
 }
 .nixed::before {
 	content: url(../images/landing/circle-empty.svg);
@@ -404,70 +421,9 @@ li {
 .checked::before {
 	content: url(../images/landing/circle-checked.svg);
 }
-.house-cluster {
-	background:
-	linear-gradient( 
-		to top, rgba(black,0.5),
-		rgba(black,0.5)
-	),
-	url(../images/landing/roofing/roofing_neighborhood.jpg);
+.full-width-off-centered {
 	background-position: center 60%;
 	background-size: cover;
-}
-.credit {
-	background-image: url(../images/landing/creditcard.jpg);
-}
-.shingles {
-	background:
-		linear-gradient( 
-			to top, rgba(black,0.65),
-			rgba(black,0.65)
-		),
-	url(../images/landing/roofing/shingles_bg.jpg);
-	background-size: cover;
-	background-position: center center;
-}
-.roofing-contractor {
-	background-image: url(../images/landing/roofing/roofing_contractor.jpg);
-}
-
-@media  (min-width: 1200px),
-		(-webkit-min-device-pixel-ratio: 2) {
-	.broken-roof {
-		background-image: url(../images/landing/roofing/pile_of_wood@2x.jpg);
-	}
-	.shiny-roof {
-		background-image: url(../images/landing/roofing/top_roof@2x.jpg);
-	}
-	.whole-home {
-		background-image: url(../images/landing/roofing/roofing_house@2x.jpg)
-	}
-	.house-cluster {
-		background:
-		linear-gradient( 
-			to top, rgba(black,0.5),
-			rgba(black,0.5)
-		),
-		url(../images/landing/roofing/roofing_neighborhood@2x.jpg);
-		background-position: center 60%;
-		background-size: cover;
-	}
-	.credit {
-		background-image: url(../images/landing/creditcard@2x.jpg);
-	}
-	.shingles {
-		background:
-			linear-gradient( 
-				to top, rgba(black,0.65),
-				rgba(black,0.65)
-			),
-		url(../images/landing/roofing/shingles_bg@2x.jpg);
-		background-size: cover;
-		background-position: center center;
-	}
-	.roofing-contractor {
-		background-image: url(../images/landing/roofing/roofing_contractor@2x.jpg);
-	}
 }
 
 @media (max-width: 1200px) {
@@ -500,6 +456,9 @@ li {
 		padding: 1% 5%;
 		margin: 1%;
 	}
+	.quote-button {
+		font-size: 1.5rem;
+	}
 }
 @media (max-width: 736px) { // at iPhone 6+, landscape
 	body {
@@ -525,8 +484,19 @@ li {
 	}
 }
 @media (max-width: 550px) {
-	.roofing-contractor + .split-content .quote-button {
-		font-size: 1.2em;
+	.quote-wrap {
+	
+		&::before {
+			transform: none;
+		}
+		
+		&.white .quote-button {
+			color: $green;
+		}
+	}
+	.quote-button {
+		font-size: 1.2rem;
+		color: white;
 	}
 }
 @media (max-width: 420px) {
@@ -535,6 +505,10 @@ li {
 	}
 	.split-image {
 		width: 20%;
+	}
+	.banner-button .quote-button {
+		font-size: 0.8rem;
+		padding: 3px 6px;
 	}
 }
 @media (max-width: 374px) { // below iPhone 6, portrait
@@ -556,7 +530,7 @@ li {
 	.split-image {
 		width: 15%;
 	}
-	.house-cluster .quote-button {
-		font-size: 0.8em;
+	.quote-button {
+		font-size: 0.8rem;
 	}
 }
